--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -1928,7 +1928,8 @@ addons:
     git:
       repo: https://repo1.dso.mil/big-bang/product/packages/thanos.git
       tag: "12.23.0-bb.0"
-      path: "./chart"
+      #path: "./chart"
+      branch: "gluon-4-7-x"
     helmRepo:
       repoName: "registry1"
       chartName: "thanos"
