--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -697,7 +697,8 @@ loki:
   git:
     repo: https://repo1.dso.mil/big-bang/product/packages/loki.git
     path: "./chart"
-    tag: "5.42.0-bb.2"
+    # tag: "5.42.0-bb.2"
+    branch: "refactor-loki-to-gluon0.4.8"
   helmRepo:
     repoName: "registry1"
     chartName: "loki"
