--- a/chart/templates/loki/values.yaml
+++ b/chart/templates/loki/values.yaml
@@ -94,7 +94,7 @@ singleBinary:
 {{- end }}
 
 {{- with .Values.loki.objectStorage }}
-{{- if and (eq $.Values.loki.strategy "scalable") (not (and .endpoint .region)) }}
+{{- if and (eq $.Values.loki.strategy "scalable") (not (or (and .region .endpoint) (and .region .iamProfile))) }}
 minio:
   enabled: true
 
