--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -698,7 +698,7 @@ loki:
     repo: https://repo1.dso.mil/big-bang/product/packages/loki.git
     path: "./chart"
     # tag: "5.42.0-bb.2"
-    branch: "bstask-add-test"
+    branch: "bstask-test"
   helmRepo:
     repoName: "registry1"
     chartName: "loki"
