--- a/tests/openshift-test-values.yaml
+++ b/tests/openshift-test-values.yaml
@@ -407,7 +407,7 @@ jaeger:
           cypress_url: "https://tracing.bigbang.dev"
 
 kiali: 
-  enabled: true
+  enabled: false
   git:
     tag: null
     branch: "main"
