--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -1350,7 +1350,7 @@ addons:
       enabled: false
       client_id: dev_00eb8904-5b88-4c68-ad67-cec0d2e07aa6_anchore
     enterprise:
-      enabled: false
+      enabled: true
       licenseYaml: |
        "TBD"
     values:
