--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -982,6 +982,17 @@ grafana:
                   protocol: TLS
                   name: https
               resolution: DNS
+          - name: "allow-prometheus-for-cypress"
+            enabled: true
+            spec:
+              hosts:
+                - 'prometheus.bigbang.dev'
+              location: MESH_EXTERNAL
+              ports:
+                - number: 443
+                  protocol: TLS
+                  name: https
+              resolution: DNS
     dashboards:
       default:
         k8s-deployment:
