--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -212,6 +212,8 @@ istio:
   egressGateways:
     core-egressgateway:
       type: "ClusterIP"
+    istio-egressgateway:
+      enabled: false
 
   gateways:
     public:
