adds support for conditional monitoring cypress tests

--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -945,6 +945,7 @@ monitoring:
           cypress_keycloak_test_enable: 'false'
           cypress_tnr_username: "cypress"
           cypress_tnr_password: "tnr_w!G33ZyAt@C8"
+          cypress_bigbang_integration: 'true'
 
 grafana:
   enabled: true
