--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -791,12 +791,40 @@ fluentbit:
     bbtests:
       enabled: true
 
+
 loki:
   strategy: scalable
   values:
     istio:
       hardened:
         enabled: true
+        customServiceEntries:
+          - name: "allow-npm-for-cypress-tests"
+            enabled: true
+            spec:
+              hosts:
+                - 'registry.npmjs.org'
+                - 'download.cypress.io'
+                - 'cdn.cypress.io'
+              location: MESH_EXTERNAL
+              ports:
+                - number: 443
+                  protocol: TLS
+                  name: https
+              resolution: DNS
+          - name: "allow-repo1-for-cypress"
+            enabled: true
+            spec:
+              hosts:
+                - 'repo1.dso.mil'
+              location: MESH_EXTERNAL
+              ports:
+                - number: 443
+                  protocol: TLS
+                  name: https
+              resolution: DNS
+
+
     minio:
       enabled: true
     write:
