Resolve "Istio Values Not Passed To Haproxy"

--- a/chart/templates/haproxy/values.yaml
+++ b/chart/templates/haproxy/values.yaml
@@ -100,4 +100,6 @@ image:
   repository: registry1.dso.mil/ironbank/opensource/haproxy/haproxy22
 containerPorts:
   http: 8080
+istio:
+  enabled: {{ .Values.istio.enabled }}
 {{- end -}}
