--- a/chart/templates/authservice/values.yaml
+++ b/chart/templates/authservice/values.yaml
@@ -6,6 +6,9 @@
 # hostname is deprecated and replaced with domain. But if hostname exists then use it.
 {{- $domainName := default .Values.domain .Values.hostname }}
 
+istio:
+  enabled: {{ .Values.istio.enabled }}
+
 image: 
   pullPolicy: {{ .Values.imagePullPolicy }}
   
