--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -869,11 +869,13 @@ monitoring:
   git:
     repo: https://repo1.dso.mil/big-bang/product/packages/monitoring.git
     path: "./chart"
-    tag: "56.2.1-bb.3"
+    tag: ""
+    branch: "163-improve-cypress-tests-to-check-for-unhealthy-targets"
   helmRepo:
     repoName: "registry1"
     chartName: "monitoring"
-    tag: "56.2.1-bb.3"
+    tag: ""
+    branch: "163-improve-cypress-tests-to-check-for-unhealthy-targets"
 
   # -- Flux reconciliation overrides specifically for the Monitoring Package
   flux:
