Mutator + Exceptions for Elastic Search Kibana automount-sa-token findings

--- a/chart/templates/kyverno-policies/values.yaml
+++ b/chart/templates/kyverno-policies/values.yaml
@@ -754,7 +754,12 @@ policies:
       - namespace: logging
         pods:
           allow:
-          - logging-loki-minio-ss-*
+          - logging-loki-minio-*
+          deny:
+          - logging-ek-es-data*
+          - logging-ek-es-master*
+          - logging-ek-kb*
+          - logging-ek-metrics*
       - namespace: minio-operator
         pods:
           allow:
