fixing the authorization policies SKIP UPGRADE CHECK

--- a/chart/templates/grafana/values.yaml
+++ b/chart/templates/grafana/values.yaml
@@ -35,6 +35,12 @@ gitlabRunner:
 istio:
   {{- $grafanaInjection := dig "istio" "injection" "enabled" .Values.grafana }}
   enabled: {{ .Values.istio.enabled }}
+  hardened:
+    {{- if or (dig "values" "istio" "hardened" "enabled" false .Values.monitoring) (dig "values" "istio" "hardened" "enabled" false .Values.grafana) }}
+    enabled: true
+    {{- else }}
+    enabled: false
+    {{- end }}
   grafana:
     enabled: true
     gateways:
