--- a/chart/templates/mattermost/values.yaml
+++ b/chart/templates/mattermost/values.yaml
@@ -21,6 +21,11 @@ istio:
     gateways:
     - istio-system/{{ default "public" .Values.addons.mattermost.ingress.gateway }}
   injection: {{ ternary "enabled" "disabled" $istioInjection }}
+  hardened:
+    clusterAuditor:
+      enabled: {{ .Values.clusterAuditor.enabled }}
+    kyvernoReporter:
+      enabled: {{ .Values.kyvernoReporter.enabled }}
 
 {{- if $istioInjection }}
 podAnnotations:
