Testing Istio whitelist egress for Neuvector MR - branch registry-only-sidecar-neuvector
Signed-off-by: Chris Harden <chris@defenseunicorns.com>

--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -1122,6 +1122,49 @@ neuvector:
   values:
     k3s:
       enabled: true
+    git:
+      tag: null
+      branch: "registry-only-sidecar-tempo"
+    istio:
+     enabled: true
+     hardened:
+       enabled: true
+       customServiceEntries:
+         - name: "allow-npm-for-cypress-tests"
+           enabled: true
+           spec:
+             hosts:
+               - 'registry.npmjs.org'
+               - 'download.cypress.io'
+               - 'cdn.cypress.io'
+             location: MESH_EXTERNAL
+             ports:
+               - number: 443
+                 protocol: TLS
+                 name: https
+             resolution: DNS
+         - name: "allow-repo1-for-cypress"
+           enabled: true
+           spec:
+             hosts:
+               - 'repo1.dso.mil'
+             location: MESH_EXTERNAL
+             ports:
+               - number: 443
+                 protocol: TLS
+                 name: https
+             resolution: DNS
+         - name: "allow-neuvector-for-cypress"
+           enabled: true
+           spec:
+             hosts:
+               - 'neuvector.bigbang.dev'
+             location: MESH_EXTERNAL
+             ports:
+               - number: 443
+                 protocol: TLS
+                 name: https
+             resolution: DNS
     bbtests:
       enabled: true
       cypress:
