Testing Istio whitelist egress for Tempo MR - adding customServiceEntry for grafana
Signed-off-by: Chris Harden <chris@defenseunicorns.com>

--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -981,7 +981,17 @@ tempo:
                   protocol: TLS
                   name: https
               resolution: DNS
-
+          - name: "allow-grafana-for-cypress"
+            enabled: true
+            spec:
+              hosts:
+                - 'grafana.bigbang.dev'
+              location: MESH_EXTERNAL
+              ports:
+                - number: 443
+                  protocol: TLS
+                  name: https
+              resolution: DNS
 
     tempo:
       resources:
