updating the tag manually, robot didn't pick it up for some reason

--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -1135,6 +1135,9 @@ neuvector:
           limits:
             cpu: "2"
             memory: "1500M"
+    istio:
+      hardened:
+        enabled: true
 
 twistlock:
   enabled: false
