--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -75,14 +75,45 @@ istio:
           strategy: "anonymous"
 
 jaeger:
+  git:
+    tag: null
+    branch: "71-egress-whitelist-Jaeger"
   enabled: false
   sso:
     enabled: false
     client_id: dev_00eb8904-5b88-4c68-ad67-cec0d2e07aa6_jaeger
   values:
     istio:
-      jaeger:
-        enabled: true
+      # jaeger:
+        # enabled: true
+      hardened:
+      enabled: true
+        customServiceEntries:
+          - name: "allow-npm-for-cypress-tests"
+            enabled: true
+            spec:
+              hosts:
+                - 'registry.npmjs.org'
+                - 'download.cypress.io'
+                - 'cdn.cypress.io'
+              location: MESH_EXTERNAL
+              ports:
+                - number: 443
+                  protocol: TLS
+                  name: https
+              resolution: DNS
+          - name: "allow-repo1-for-cypress"
+            enabled: true
+            spec:
+              hosts:
+                - 'repo1.dso.mil'
+              location: MESH_EXTERNAL
+              ports:
+                - number: 443
+                  protocol: TLS
+                  name: https
+              resolution: DNS
+
     bbtests:
       enabled: true
       cypress:
