fix BB test values

--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -78,10 +78,10 @@ jaeger:
   git:
     tag: null
     branch: "71-egress-whitelist-Jaeger"
-  enabled: false
-  sso:
-    enabled: false
-    client_id: dev_00eb8904-5b88-4c68-ad67-cec0d2e07aa6_jaeger
+  # enabled: false
+  # sso:
+  #   enabled: false
+  #   client_id: dev_00eb8904-5b88-4c68-ad67-cec0d2e07aa6_jaeger
   values:
     istio:
       # jaeger:
@@ -114,11 +114,13 @@ jaeger:
                   name: https
               resolution: DNS
 
-    bbtests:
-      enabled: true
-      cypress:
-        envs:
-          cypress_url: "https://tracing.bigbang.dev"
+
+    # bbtests:
+    #   enabled: true
+    #   cypress:
+    #     envs:
+
+    #       cypress_url: "https://tracing.bigbang.dev"
           # uncomment following variables for sso keycloak testing in bb
           # cypress_tnr_username: "cypress"
           # cypress_tnr_password: "tnr_w!G33ZyAt@C8"
