--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -77,7 +77,7 @@ istio:
 jaeger:
   git:
     tag: null
-    branch: "71-egress-whitelist-Jaeger"
+    branch: 71-egress-whitelist-Jaeger
   # enabled: false
   # sso:
   #   enabled: false
