--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -1141,9 +1141,9 @@ twistlock:
   sso:
     enabled: false
     client_id: dev_00eb8904-5b88-4c68-ad67-cec0d2e07aa6_twistlock-saml
-  git:
-    tag: null
-    branch: "registry-only-sidecar-twistlock"
+# git:
+#   tag: null
+#   branch: "registry-only-sidecar-twistlock"
   values:
     istio:
       enabled: true
