--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -934,9 +934,9 @@ tempo:
   sso:
     enabled: false
     client_id: dev_00eb8904-5b88-4c68-ad67-cec0d2e07aa6_tempo
-  git:
-    tag: null
-    branch: "registry-only-sidecar-tempo-II"
+# git:
+#   tag: null
+#   branch: "registry-only-sidecar-tempo-II"
   values:
     istio:
       tempoQuery:
