troubleshooting mr-bot mr failure: adding grafana.com to customServiceEntries
Signed-off-by: Chris Harden <chris@defenseunicorns.com>

--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -986,6 +986,7 @@ tempo:
             spec:
               hosts:
                 - 'grafana.bigbang.dev'
+                - 'grafana.com'
               location: MESH_EXTERNAL
               ports:
                 - number: 443
