adding missing OCI package entry for holocron

--- a/tests/oci-values.yaml
+++ b/tests/oci-values.yaml
@@ -203,3 +203,8 @@ addons:
     sourceType: "helmRepo"
     helmRepo:
       cosignVerify: true
+
+  holocron:
+    sourceType: "helmRepo"
+    helmRepo:
+      cosignVerify: true
