SKIP CHECK CHANGES Anchore Enterprise by default

--- a/chart/templates/anchore/values.yaml
+++ b/chart/templates/anchore/values.yaml
@@ -38,12 +38,11 @@ networkPolicies:
     {{- $default := dict "app" (dig "gateways" $gateway "ingressGateway" nil .Values.istio) "istio" nil }}
     {{- toYaml (dig "values" "gateways" $gateway "selector" $default .Values.istio) | nindent 4 }}
 
-{{- if and .Values.addons.anchore.enterprise.enabled .Values.addons.anchore.enterprise.licenseYaml }}
+{{- if .Values.addons.anchore.enterprise.licenseYaml }}
 enterpriseLicenseYaml: |
   {{ .Values.addons.anchore.enterprise.licenseYaml | nindent 2 }}
 {{- end }}
 
-  {{- if .Values.addons.anchore.enterprise.enabled }}
 sso:
   enabled: {{ .Values.addons.anchore.sso.enabled }}
   spEntityId: {{ .Values.addons.anchore.sso.client_id }}
@@ -51,12 +50,11 @@ sso:
   acsUrl: https://{{ tpl ($anchoreUrl | default (printf "%s.%s" "anchore" $domainName)) . }}/service/sso/auth/keycloak
   idpMetadataUrl: "{{ include "sso.saml.descriptor" . }}"
   roleAttribute: {{ .Values.addons.anchore.sso.role_attribute }}
-  {{- end }}
 
-anchoreEnterpriseGlobal:
-  imagePullPolicy: {{ .Values.imagePullPolicy }}
-  enabled: {{ .Values.addons.anchore.enterprise.enabled }}
+global:
   imagePullSecretName: private-registry
+
+imagePullPolicy: {{ .Values.imagePullPolicy }}
 
 postgresql:
   {{- if .Values.istio.enabled }}
@@ -73,35 +71,24 @@ postgresql:
   postgresPort: {{ .Values.addons.anchore.database.port }}
   {{- end }}
 
-anchoreGlobal:
-  {{- if .Values.istio.enabled }}
-  annotations:
-    {{ include "istioAnnotation" . }}
-  {{- end }}
-  imagePullPolicy: {{ .Values.imagePullPolicy }}
-  openShiftDeployment: {{ .Values.openshift }}
-  {{- if .Values.addons.anchore.adminPassword }}
-  defaultAdminPassword: {{ .Values.addons.anchore.adminPassword }}
-  {{- end }}
-  imagePullSecretName: private-registry
+feeds:
+  feeds-db:
+    {{- if .Values.istio.enabled }}
+    podAnnotations:
+      {{ include "istioAnnotation" . }}
+    {{- end }}
+    imagePullSecrets: private-registry
+    {{- if and .Values.addons.anchore.database.host .Values.addons.anchore.database.port .Values.addons.anchore.database.username .Values.addons.anchore.database.password .Values.addons.anchore.database.feeds_database }}
+    enabled: false
+    auth:
+      username: {{ .Values.addons.anchore.database.username }}
+      password: {{ .Values.addons.anchore.database.password }}
+      database: {{ .Values.addons.anchore.database.feeds_database }}
+    externalEndpoint: "{{ .Values.addons.anchore.database.host }}"
+    postgresPort: {{ .Values.addons.anchore.database.port }}
+    {{- end }}
 
-{{- if .Values.addons.anchore.enterprise.enabled }}
-anchore-feeds-db:
-  {{- if .Values.istio.enabled }}
-  podAnnotations:
-    {{ include "istioAnnotation" . }}
-  {{- end }}
-  imagePullSecrets: private-registry
-  {{- if and .Values.addons.anchore.database.host .Values.addons.anchore.database.port .Values.addons.anchore.database.username .Values.addons.anchore.database.password .Values.addons.anchore.database.feeds_database }}
-  enabled: false
-  postgresUser: {{ .Values.addons.anchore.database.username }}
-  postgresPassword: {{ .Values.addons.anchore.database.password }}
-  postgresDatabase: {{ .Values.addons.anchore.database.feeds_database }}
-  externalEndpoint: "{{ .Values.addons.anchore.database.host }}"
-  postgresPort: {{ .Values.addons.anchore.database.port }}
-  {{- end }}
-
-anchoreEnterpriseUi:
+ui:
   imagePullPolicy: {{ .Values.imagePullPolicy }}
   imagePullSecretName: private-registry
 
@@ -149,6 +136,5 @@ ui-redis:
       enabled: true
       namespace: monitoring
   {{- end }}
-{{- end }}
 
 {{- end }}
